--- a/css/queries.css
+++ b/css/queries.css
@@ -1,6 +1,7 @@
 @media (max-width: 920px) {
   body .form__container {
     max-width: 400px;
+    margin-bottom: 0;
   }
   body .form__heading {
     font-size: 1.6rem;
@@ -21,7 +22,6 @@
     border-radius: 50%;
     height: 30px;
     width: 30px;
-    transition: all 0.2s ease-in;
     outline: none;
     border: 2.4px solid var(--color-accent);
     background-color: var(--color-background);
@@ -38,7 +38,7 @@
     flex-direction: column;
     align-items: center;
 
-    gap: 2rem;
+    gap: 1.6rem;
   }
 
   body .list__item {
@@ -49,28 +49,42 @@
 
 @media (max-width: 620px) {
   body .form__container {
-    max-width: 350px;
-    padding: 1rem 1rem;
+    width: 350px;
+    padding: 0.4rem 0.4rem;
     margin-top: 3rem;
     margin-bottom: 0;
   }
 
   /* body .container {
+
     margin: 0;
   } */
 
-  body .form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-  }
   body .form__heading {
     font-size: 1.2rem;
+    margin-bottom: 0.4rem;
+    margin-top: 0.4rem;
+  }
+  body .form {
+    display: grid;
+    row-gap: 1.4rem;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+
+    width: 400px;
+  }
+
+  body .question__container.q__task {
+    grid-column: 1 / -1;
+  }
+
+  body .question__container {
+    gap: 0.6rem;
   }
   body .input__text {
-    width: 150px;
+    width: 300px;
     height: 30px;
     border-radius: 12px;
     font-size: 1rem;
@@ -109,7 +123,7 @@
   }
 
   body .list__item {
-    width: 200px;
+    width: 320px;
     height: 10px;
     gap: 0.8rem;
   }
@@ -126,5 +140,10 @@
     font-size: 0.8rem;
 
     padding: 0.1em 0.4em;
+  }
+
+  body .remove__item {
+    height: 20px;
+    width: 20px;
   }
 }
