--- a/css/queries.css
+++ b/css/queries.css
@@ -73,7 +73,7 @@
     justify-items: center;
     align-items: center;
 
-    width: 400px;
+    width: 360px;
   }
 
   body .question__container.q__task {
@@ -103,6 +103,7 @@
     border-radius: 50%;
     height: 30px;
     width: 30px;
+    padding: 1rem;
     transition: all 0.2s ease-in;
     outline: none;
     border: 2.4px solid var(--color-accent);
@@ -143,7 +144,24 @@
   }
 
   body .remove__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 20px;
     width: 20px;
+    font-size: 0.8rem;
+    padding: 0rem;
+  }
+}
+
+@media (max-width: 395px) {
+  body .form__container {
+    max-width: 320px;
+  }
+
+  body .list__item {
+    gap: 0.8rem;
+    width: 270px;
+    height: 10px;
   }
 }
